# ekrhizoc

./: .gitignore  .isort.cfg  .pylintrc  .travis.yml  CHANGELOG.md  Makefile  README.md  build-linux.yml  build-mac.yml  conda_setup.yml  pyproject.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: codeql.yml  ekrhizoc_cd.yaml  ekrhizoc_ci.yaml
deployment/docker/: ekrhizoc.dockerfile  prod.dockerfile  test.dockerfile
ekrhizoc/: logger.py  logging.py  settings.py
ekrhizoc/bot/: base_crawler.py
ekrhizoc/bot/crawlers/: universal_bfs.py
ekrhizoc/bot/helpers/: url_utils.py
ekrhizoc/cli/: __main__.py  base_command.py
ekrhizoc/cli/commands/: crawl.py
githooks/: pre-commit
scripts/: build_docker_image.sh
scripts/helpers/: cleanup.sh  conda-binary.sh  conda-create-env.sh  conda-remove-env.sh  environment.sh  poetry_setup.sh
tests/: conftest.py
tests/fixtures/: canonical_urls.json  invalid_urls.json  url_data.json  valid_urls.json
tests/unit/: settings_test.py
tests/unit/bot/crawlers/: crawlers_init_test.py  test_crawlers_init.py  universal_bfs_test.py
tests/unit/bot/helpers/: url_utils_test.py
tests/unit/cli/commands/: command_init_test.py  crawl_test.py  test_command_init.py  test_crawl.py
