[tool.poetry]
name = "ekrhizoc"
version = "0.0.2"
description = "A simple python web crawler"
authors = ["Nicholas Elia <me@nichelia.com>"]
include = ["README.md"]

[tool.poetry.dependencies]
python = "^3.7"              # PSF
requests = "^2.22"           # Apache2
urllib3 = "^1.25"            # MIT
lxml = "^4.4"                # BSD
psutil = "^5.6"              # BSD
poetry = "^1.0.3"            # MIT
tomlkit = "^0.5.8"           # MIT
beautifulsoup4 = "4.8.1"     # MIT
lockfile = "^0.12.2"         # MIT
grip = "^4.5"
urlcanon = "^0.3.1"          # Apache2
asyncio = "^3.4.3"
aiohttp = "^3.6.2"
aiodns = "^2.0.0"
brotlipy = "^0.7.0"
networkx = "^2.4"
pyyaml = "^5.3"
matplotlib = "^3.1.3"

[tool.poetry.dev-dependencies]
black = "19.10b0"            # MIT
isort = "4.3.4"              # MIT
mock = "4.0.1"               # BSD
pylint = "^2.4.4"            # GPLv2, but only used as a tool
pytest = "^5.3"              # MIT
pytest-cov = "^2.8"          # MIT
pytest-env = "^0.6.2"        # MIT

[tool.poetry.scripts]
ekrhizoc = "ekrhizoc.cli.__main__:main"

[build-system]
requires = ["wheel", "tomlkit", "poetry>=0.12.16"] # PEP 518
build-backend = "poetry.masonry.api"
